$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.14-7 (opened July 5, 2008)

	* ordilabel: new function for cluttered ordination plots -- text
	is written on a non-transparent label. Similar to s.label()
	function in ade4.

	* ordipointlabel: new function for cluttered ordination plots --
	points are in fixed positions, but their text label is located to
	avoid overlap. The optimization is based on optim(..., method =
	"SANN"). Similar to pointLabel function in maptools.

	* permutations: permuted.index2 and associated functions now allow
	for restricted permutations of strata (i.e. restricted shuffling
	of the blocks). This changes the acceptable 'type' options and adds
	a new argument 'permute.strata' to permControl(), to control how
	and what is permuted.

Version 1.14-6 (closed July 5, 2008)


	* permatswap (nestedness.c): translated Peter Solymos's
	swapcount.R to C. This is still experimental code, and the user
	interface is undocumented, except here: use method = "Cswap" in
	permatswap.

	* permatswap: was not updating swap matrix but using the same
	starting matrix after burnin for every swap.
	
	* swapcount.R:  was advancing 'thin' counter even when a swap was
	rejected so that fewer than requesed 'thins' were done.

	* permat.R, swapcount.R: genereal cleanup, most importantly
	replacing vector operators & and | with logical operators && and
	||. 

	* commsimulator: "quasiswap" written in C and *much* faster
	now. Times are for MacBook Intel 1.86 GHz and 100 matrices:
	"sipoo" from 7 min to 4 sec, "BCI" from 2+ hrs to 45
	sec. Actually, quasiswap is now much faster than ordinary swap
	which also should be written in C. "Backtracking" is so much more
	complicated code that it could probably never reach "quasiswap"
	even if written in C, and it may be dropped in the future. 

	* commsimulator: "swap" and "tswap" written in C, and clearly
	faster now. In MacBook, 100 swaps with "sipoo" went from 8 sec to